apps/memos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memos
spec:
  ports:
    - port: 80
      targetPort: memos
  selector:
    app.kubernetes.io/name: memos
