apps/memos/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "memos"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "memos"
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: "memos"
      from: []
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 3306
          protocol: TCP
        - port: 3307
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.0.0/16
